--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,13 +30,8 @@ repos:
     hooks:
     -   id: pyupgrade
         args: [--py37-plus]
--   repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v1.7.0
-    hooks:
-    -   id: autopep8
-        args: [--in-place, --max-line-length=88]
 -   repo: https://github.com/PyCQA/flake8
     rev: 5.0.4
     hooks:
     -   id: flake8
-        args: [--max-line-length=88]
+        args: [--config=.flake8]
