Updating build tools

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,10 +11,18 @@ classifiers =
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
+    Typing :: Typed
+
+
 
 [options]
 packages = find:
 python_requires = >=3.7
+include_package_data: True
+
+[options.package_data]
+jupyter_notebook_parser = py.typed
+
 
 [options.packages.find]
 exclude =
